# Bombswab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake.bat  index.html
.github/workflows/: build.yaml  ci.yaml  codeql.yaml  deploy.yaml
include/: actions.hpp  audio.hpp  camera.hpp  grid.hpp  item_slot.hpp  items.hpp  particles.hpp  rlwrap.hpp  spritesheet.hpp  spritesheets.hpp  thing.hpp  things.hpp  utils.hpp  weapons.hpp
src/: actions.cpp  actions.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  corpse.cpp  die.cpp  gamestate.cpp  gamestate.hpp  grid.cpp  grid.hpp  humanoid.cpp  id.tpp  item_slot.cpp  item_slot.hpp  items.cpp  items.hpp  keybinds.cpp  keybinds.hpp  level.cpp  level.hpp  line.cpp  line.hpp  main.cpp  misc.cpp  misc.hpp  move.cpp  particles.cpp  particles.hpp  projectile.cpp  shoot.cpp  spritesheet.cpp  spritesheet.tpp  spritesheets.hpp  thing.cpp  things.cpp  things.hpp  utils.cpp  utils.tpp  (+2 more)
src/actions/: die.cpp  move.cpp  shoot.cpp
src/things/: bullet.cpp  enemy.cpp  humanoid.cpp  misc.cpp  player.cpp  projectile.cpp
